we have our first successful clipCoupon API call

--- a/coupon-component-test.html
+++ b/coupon-component-test.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>SOAP JavaScript Client Test</title>
+    <title>Coupon Component Test</title>
     <style>
     *{ padding: 5px; margin: 5px; font-family: sans-serif;}
         #attach_coupon{
@@ -43,7 +43,6 @@
         <input id="loyalty" type="text" placeholder="Enter loyalty number" value="458009367"/>
         <input id="pin" type="text" placeholder="Enter Pin" />
         <input id="submit_btn" type="button" value="Add Loyalty Info" onclick="onSubmitClick();" />
-        <input id="get_active_btn" type="button" value="Get Active Coupons" onclick="onGetActiveClick();" />
     </form>
 </body>
 <html>
