handling 0 and -10 clipCoupon statusCode response types

--- a/coupon-component-test.html
+++ b/coupon-component-test.html
@@ -21,8 +21,11 @@
     <script type="text/javascript" src="js/main.js"></script>
 </head>
 <body onload="onload();">
+
     <is-coupon id="coupon"
+        data-auto-load
         data-url="https://devapi.cellfire.com/services/QBridgeServiceV2"
+        data-api-type="cellfire"
         data-api-key="y7zkry6e68dddhk6wmpwh5yv"
         data-api-tlc="UNT25cU4aYnVtdE1RODQ1NGtBc01n#bum"
     >
