Added a bunch of event dispatching for the errors and response codes

--- a/coupon-component-test.html
+++ b/coupon-component-test.html
@@ -10,6 +10,7 @@
   </style>
 	<script src="js/jquery.min.js"></script>
   <script src="https://s0.2mdn.net/ads/studio/Enabler.js"></script>
+  <script type="text/javascript" src="js/gwd_webcomponents_min.js"></script>
   <script type="text/javascript" src="js/jquery.soap.js"></script>
   <script type="text/javascript" src="js/xml2json.js"></script>
 	<script type="text/javascript" src="js/coupon.js"></script>
@@ -26,7 +27,7 @@
     >
   </ored-coupon>
 
-  <h1>Hello Cellfire API Testing</h1>
+  <h1>Cellfire API Testing</h1>
   <p><a href="https://docs.google.com/document/d/17YMIl9wRBF7jMzeBWD9qt4LRBWdwPRaM09uYRUY7Ors/edit#" title="Coupon Notes Doc">Coupon Notes Doc</a> | <a href="https://docs.google.com/document/d/12TlZ06TRjvONZAPC-g_dwRHllRn86JVYQNFH9EPSFJg/edit#" title="Coupon Component Design Doc">Coupon Component Design Doc</a></p>
   <form id="get_merchants" name="getMerchantsAndOffersResponse" action="" method="post">
     <div>
